# translator

./: .editorconfig  .gitmodules  .prettierrc.json  README.md
docs/: riscv.md
src/loader/: CMakeLists.txt  Makefile
src/loader/src/: main.cpp
test-files/: README.md  fizz-buzz.c  fizz-buzz.riscv  fizz-buzz.riscv.disasm  fizz-buzz.riscv.objdump  hello.riscv  hello.riscv.disasm  hello.riscv.objdump  hello.static.strip.riscv  hello.static.strip.riscv.disasm  hello.static.strip.riscv.objdump  hello.strip.riscv  hello.x86  nop.x64
vagrant/: README.md  Vagrantfile
vagrant/temu/: .gitignore  Makefile  README.md
vagrant/temu/fedora/: fedora29-riscv-2.cfg
